<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="?android:attr/windowBackground"
    tools:context=".AstralChartInputActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/astral_input_title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/astral_input_title"
            android:textSize="30sp"
            android:fontFamily="serif"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Date of Birth Section -->
        <TextView
            android:id="@+id/date_of_birth_prompt_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/astral_date_of_birth_prompt"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            app:layout_constraintTop_toBottomOf="@id/astral_input_title_textview"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="24dp"/>

        <DatePicker
            android:id="@+id/birth_date_picker_astral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:theme="@style/DatePickerStyle"
            app:layout_constraintTop_toBottomOf="@id/date_of_birth_prompt_textview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>

        <!-- Submit Button -->
        <Button
            android:id="@+id/calculate_placements_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/astral_get_sun_sign_button_text"
            android:backgroundTint="?attr/colorSecondary"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintTop_toBottomOf="@id/birth_date_picker_astral"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
